<resources>
    <string name="app_name">ToDoApp</string>
    <string name="name_login">Tên đăng nhập</string>
    <string name="password">Password</string>
    <string name="birthday">Ngày sinh</string>
    <string name="idcard">CMND</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="register">Đăng Ký</string>
    <string name="yes">Đồng ý</string>
    <string name="exit">Thoát</string>
    <string name="info_input_username">Vui lòng nhập tài khoản</string>
    <string name="info_input_password">Vui lòng nhập password</string>
    <string name="add_good">Thêm thành công</string>
    <string name="add_false">Thêm thất bại</string>
    <string name="login">Đăng Nhập</string>
    <string name="trangchu">Trang chủ</string>
    <string name="thucdon">Thực đơn</string>
    <string name="nhanvien">Nhân viên</string>
    <string name="thongke">Thống kê</string>
    <string name="caidat">Cài đặt</string>
    <string name="mo">Mở</string>
    <string name="dong">Đóng</string>
    <string name="themBanAn">Thêm bàn ăn</string>
    <string name="name_dinnertable">Tên bàn ăn</string>
    <string name="add_menu">Thêm thực đơn</string>
    <string name="name_food">Tên món ăn</string>
    <string name="price">Giá bán</string>
    <string name="type_menu_food">Loại thực đơn</string>
    <string name="loithemmonan">Vui lòng nhập đầy đủ món ăn!</string>
    <string name="menu">Thực đơn</string>
    <string name="homepage">Trang chủ</string>
    <string name="priceInfo">Giá :</string>
    <string name="number">Số lượng</string>
    <string name="payment">Thanh toán</string>
    <string name="tongcong">Tổng cộng: </string>
    <string name="edit">Sửa</string>
    <string name="delete">Xóa</string>
    <string name="delete_done">Xóa thành công!</string>
    <string name="delete_false">Xóa không thành công!</string>
    <string name="edit_menu_food">Sửa thực đơn</string>
    <string name="not_null">Không được để trống!</string>
    <string name="edit_done">Sửa thành công!</string>
    <string name="edit_false">Sửa không thành công!</string>
    <string name="add_employee">Thêm nhân viên</string>
    <string name="update_employee">Cập nhật thông tin</string>
    <string name="remember">Nhớ mật khẩu</string>
    <string name="quantity">Số lượng</string>
    <string name="order_successful">Gọi món thành công!</string>
    <string name="order_failures">Gọi món thất bại!</string>
    <string name="payment_successful">Thanh toán thành công!</string>
    <string name="payment_error">Thanh toán không thành công!</string>
    <string name="facebook_app_id">326932104649777</string>
    <string name="facebook_login_protocol_schema">fb326932104649777</string>

</resources>
