<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/itHomepage"
            android:title="@string/trangchu"
            android:icon="@drawable/trangchu"
            android:checked="true"
            />

        <item
            android:id="@+id/itThucdon"
            android:title="@string/thucdon"
            android:icon="@drawable/logologin"
            />

        <item
            android:id="@+id/itNhanvien"
            android:title="@string/nhanvien"
            android:icon="@drawable/nhanvien"
            />

        <item
            android:id="@+id/itThongke"
            android:title="@string/thongke"
            android:icon="@drawable/thongke"
            />
        <item
            android:id="@+id/itSetting"
            android:title="@string/caidat"
            android:icon="@drawable/caidat"
            />
    </group>

</menu>