<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="@dimen/size16dp"
    android:paddingRight="@dimen/size16dp"
    android:paddingBottom="@dimen/size16dp"
    android:background="@color/colorPrimary"
    android:paddingTop="@dimen/size16dp">
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/size30sp"
        android:layout_above="@+id/formRegister"/>
    <LinearLayout
        android:id="@+id/formRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10db"
            android:background="@color/colorWhite"
            android:drawableLeft="@drawable/user"
            android:hint="@string/name_login"
            android:padding="@dimen/size10db"
            android:textColorHint="@color/colorGrey"
            android:singleLine="true"
            android:drawablePadding="@dimen/size10db"/>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/password"
            android:textColorHint="@color/colorGrey"
            android:padding="@dimen/size10db"
            android:layout_margin="@dimen/size10db"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/size10db"
            android:singleLine="true"
            android:password="true"/>
        <RadioGroup
            android:id="@+id/radioGroupSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/size10db">
            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"/>
            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>
        </RadioGroup>
        <Spinner
            android:id="@+id/spinRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Spinner>
        <EditText
            android:id="@+id/edtBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10db"
            android:background="@color/colorWhite"
            android:drawableLeft="@drawable/calendar"
            android:hint="@string/birthday"
            android:padding="@dimen/size10db"
            android:textColorHint="@color/colorGrey"
            android:singleLine="true"
            android:drawablePadding="@dimen/size10db"/>
        <EditText
            android:id="@+id/edtCMND"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10db"
            android:background="@color/colorWhite"
            android:drawableLeft="@drawable/card"
            android:hint="@string/idcard"
            android:padding="@dimen/size10db"
            android:singleLine="true"
            android:textColorHint="@color/colorGrey"
            android:drawablePadding="@dimen/size10db"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:layout_weight="1"
                android:padding="@dimen/size10db"
                android:layout_margin="@dimen/size10db"
                android:background="@color/colorGreen"
                />
            <Button
                android:id="@+id/btnExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:layout_weight="1"
                android:padding="@dimen/size10db"
                android:layout_margin="@dimen/size10db"
                android:background="@color/colorOrange"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>