<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_margin="@dimen/size10db"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txtTenMonAnPayment"
            android:padding="@dimen/size10db"
            android:textSize="@dimen/size18sp"
            android:layout_weight="1"
            android:text="@string/name_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtSoLuongPayment"
            android:padding="@dimen/size10db"
            android:textSize="@dimen/size18sp"
            android:layout_weight="1"
            android:text="@string/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtGiaBanPayment"
            android:padding="@dimen/size10db"
            android:textSize="@dimen/size18sp"
            android:layout_weight="1"
            android:text="@string/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>