<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_margin="@dimen/size10db"
        android:background="@color/colorGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txtTenMonAn"
            android:padding="@dimen/size10db"
            android:textSize="@dimen/size18sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/name_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtSoLuong"
            android:padding="@dimen/size10db"
            android:textSize="@dimen/size18sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtGiaBan"
            android:padding="@dimen/size10db"
            android:textSize="@dimen/size18sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <GridView
        android:numColumns="1"
        android:layout_margin="@dimen/size10db"
        android:id="@+id/gvPayment"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </GridView>
    <TextView
        android:layout_margin="@dimen/size10db"
        android:id="@+id/txtTotalPrice"
        android:text="Tổng tiền"
        android:textSize="@dimen/size18sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_margin="@dimen/size10db"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:textStyle="bold"
            android:layout_marginRight="@dimen/size10db"
            android:background="@color/colorPrimary"
            android:id="@+id/btnPayment"
            android:text="@string/payment"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/size10db"
            android:background="@color/colorOrange"
            android:id="@+id/btnPaymentExit"
            android:text="@string/exit"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>