<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_menu"
        android:layout_gravity="center"
        android:textSize="@dimen/size18sp"
        android:textStyle="bold"
        android:layout_margin="@dimen/size10db"/>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            
            <EditText
                android:singleLine="true"
                android:id="@+id/edtNameFood"
                android:hint="@string/name_food"
                android:textColorHint="@color/colorGrey"
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/size10db"
                android:layout_margin="@dimen/size10db"/>

            <EditText
                android:singleLine="true"
                android:numeric="integer"
                android:id="@+id/edtPrice"
                android:hint="@string/price"
                android:textColorHint="@color/colorGrey"
                android:layout_margin="@dimen/size10db"
                android:padding="@dimen/size10db"
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Spinner
                    android:id="@+id/spinLoaiThucDon"
                    android:layout_margin="@dimen/size10db"
                    android:padding="@dimen/size10db"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </Spinner>

                <ImageButton
                    android:id="@+id/ibtnThemLoaiThucDon"
                    android:src="@android:drawable/ic_input_add"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/imgViewHinhThucDon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size150dp"
            android:layout_weight="1"
            android:src="@drawable/background_header" />


    </LinearLayout>

    <LinearLayout
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnYesAddMenuFood"
            android:layout_margin="@dimen/size10db"
            android:padding="@dimen/size10db"
            android:text="@string/yes"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"/>

        <Button
            android:id="@+id/btnExitAddMenuFood"
            android:background="@color/colorGreen"
            android:layout_margin="@dimen/size10db"
            android:padding="@dimen/size10db"
            android:text="@string/exit"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>