<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorGreen"
    android:padding="@dimen/size16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/txtLogin"
        android:layout_above="@+id/formLogin"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/size30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/login"/>
    <ImageView
        android:layout_above="@+id/txtLogin"
        android:layout_margin="@dimen/size10db"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/size150dp"
        android:layout_height="@dimen/size150dp"
        android:src="@drawable/logologin"/>
    <LinearLayout
        android:id="@+id/formLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <EditText
            android:id="@+id/edtUsernameLogin"
            android:background="@color/colorWhite"
            android:layout_width="match_parent"
            android:hint="@string/name_login"
            android:padding="@dimen/size10db"
            android:layout_margin="@dimen/size10db"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/size10db"
            android:textColorHint="@color/colorGrey"
            android:layout_height="wrap_content"
            android:singleLine="true"/>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/edtPasswordLogin"
            android:background="@color/colorWhite"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:padding="@dimen/size10db"
            android:layout_margin="@dimen/size10db"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/size10db"
            android:textColorHint="@color/colorGrey"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/ckbRemember"
                android:layout_margin="@dimen/size10db"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="@dimen/size18sp"
                android:layout_margin="@dimen/size10db"
                android:layout_marginLeft="100dp"
                android:text="@string/remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnYesLogin"
                android:padding="@dimen/size10db"
                android:layout_margin="@dimen/size10db"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorOrange"
                android:text="@string/yes"/>
            <Button
                android:id="@+id/btnRegister"
                android:background="@color/colorAccent"
                android:layout_weight="1"
                android:padding="@dimen/size10db"
                android:layout_margin="@dimen/size10db"
                android:text="@string/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imgAvata"
                android:layout_width="250dp"
                android:layout_height="250dp" />

            <TextView
                android:id="@+id/txtEmailFB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/txtBirthdayFB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/txtFriendsFB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>